fixed issues with filter variables and rewrote renderElements() to populate the table with whatever the table header is, so I can add the option to create other groups to show more elemental properties. Need to fiure out how to add horizontal scroll bar to table so table doesn't squish as more properties are added

--- a/style.css
+++ b/style.css
@@ -3,25 +3,21 @@ body {
     margin: 0 auto;
 }
 
-table{
-    text-align: center;
-    border-collapse: collapse;
-    border: 1px solid green;
-}
+
 
 th {
-    width: 25%;
+    width: 60px;
     height: 60px;
     border: 1px solid black;
 }
 
 tr {
-    width: auto;
+    width: 100%;
     border: 1px solid black;
 }
 
 td {
-    width: 25%;
+    width: 60px;
     height: 30px;   
 }
 
@@ -31,17 +27,12 @@ tr:nth-child(even) {
 }   /* credit: https://www.w3schools.com/howto/howto_css_table_zebra.asp */
 
 thead {
+    width: auto;
     height:70px;
     border: 1px solid black;
 }
 
-.tableBody{
-    height: 100px;
-    width: 100%;
-    float: right;
-    overflow-y: auto;
-    overflow-x: auto;
-}
+
 
 .searchBox {
     width: 45%;
@@ -50,14 +41,24 @@ thead {
     border: 1px solid black;
 }
 
-.container {
+.tableContainer {
+    border-collapse: collapse;
     width: 45%;
     height: 600px;
     margin: 1%;
     float: right;
     overflow-y: auto;
-    overflow-x: auto;
+    overflow-x: scroll;
     border: 1px solid black;
+}
+
+table{
+    text-align: center;
+    width: 100%;
+    height: 100px;
+    overflow-y: auto;
+    overflow-x: scroll;
+    
 }
 
 .titleSection {
